[tool.poetry]
name = "epure"
version = "0.1.0"
description = "purest architecture"
authors = ["nagvalhm <nagvalhm@yandex.ru>"]
license = "MIT"
packages = [
    { include = "pypi_stub" },
]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "2.9.3"

[tool.poetry.dev-dependencies]
pyright = "1.1.257"
pytest = "7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
strictParameterNoneValue = false
reportWildcardImportFromLibrary = false